[gd_scene load_steps=5 format=2]

[ext_resource path="res://AutoLoad/Session/session.gd" type="Script" id=1]
[ext_resource path="res://UI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/LoseMenu/LoseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/click_button.wav" type="AudioStream" id=4]

[node name="Session" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="HTTPSession" type="HTTPRequest" parent="."]

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]

[node name="LoseMenu" parent="." instance=ExtResource( 3 )]

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="request_completed" from="HTTPSession" to="." method="_on_HTTPSession_request_completed"]
